# mmio

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conanfile.py  mmio_exceptions.h  vcpkg.json
.github/workflows/: cmake.yml  pages.yml
benchmarks/: mmio_benchmark.cpp
cmake/: mmioConfig.cmake.in
docs/: api.html  deployment.html  index.html
include/: mmio.h  mmio_exceptions.h  mmio_functions.h  mmio_header.h  mmio_matrix.h
src/: main.cpp
tests/: add_subdirectory_consumer.cmake  header_self_contained.cpp  include_mmio_exceptions.cpp  include_mmio_functions.cpp  include_mmio_header.cpp  include_mmio_matrix.cpp  install_consumer.cmake  mmio_tests.cpp
tests/add_subdirectory_consumer/: CMakeLists.txt  main.cpp
tests/install_consumer/: CMakeLists.txt  main.cpp
